<resources>
    <string name="app_name">Dicoding Event</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming Events</string>
    <string name="title_favorite">Favorite Events</string>
    <string name="upcoming">Upcoming</string>
    <string name="title_finished">Finished Events</string>
    <string name="finished">Finished</string>
    <string name="colon">&#160; : &#160;</string>
    <string name="owner">Penyelenggara</string>
    <string name="registrants">Registrasi</string>
    <string name="quota">Sisa Kuota</string>
    <string name="category">Kategori</string>
    <string name="beginTime">Dimulai</string>
    <string name="description">Deskripsi</string>
    <string name="location">Tempat</string>
    <string name="registrasi">Registrasi</string>
    <string name="hintSearch">Masukan Kata Kunci</string>
    <string name="favorite">Favorite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_favorite_event">Favorite Event</string>
    <string name="title_settings">Settings</string>
    <string name="title_dark_mode">Dark Mode"</string>
    <string name="dark_mode_description">Aktifkan Dark Mode</string>
    <string name="title_daily_reminder">Pengingat</string>
    <string name="daily_reminder_description">Hidupkan Notification</string>
    <string name="enable">Enable</string>
    <string name="love_button">Mark As Favorite</string>
    <string name="settings">Settings</string>
</resources>