<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dicodingevent.view.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.example.dicodingevent.view.upcoming.UpcomingFragment"
        android:label="@string/title_upcoming"
        tools:layout="@layout/fragment_upcoming"/>
    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.example.dicodingevent.view.finished.FinishedFragment"
        android:label="@string/title_finished"
        tools:layout="@layout/fragment_finished" />
    <activity
        android:id="@+id/detailEventActivity"
        android:name="com.example.dicodingevent.view.detail.DetailEventActivity"
        android:label="@string/title_favorite"
        tools:layout="@layout/activity_detail_event" />
    <activity
        android:id="@+id/searchActivity"
        android:name="com.example.dicodingevent.view.search.SearchActivity"
        android:label="Search"
        tools:layout="@layout/activity_search" />
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.dicodingevent.view.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.dicodingevent.view.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>