<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Relative Layout for title and search button -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_upcoming"
            android:fontFamily="@font/inter_bold"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/baseline_search_24"
            android:contentDescription="@string/hintSearch"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_marginEnd="5dp" />
    </RelativeLayout>

    <!-- Upcoming Events RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_upcoming_events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp" />

    <!-- ProgressBar for loading state -->
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <!-- Title for Finished Events -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_finished"
        android:fontFamily="@font/inter_bold"
        android:textSize="18sp"
        android:layout_marginBottom="8dp" />

    <!-- Finished Events RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_finished_events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
